5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1875_1725.log
== SUBMITION (2019-07-02 18:51:06) 
-- CODE:
from numpy import *
form numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(m[i,j] == "B"):
			s = s + 1
		if(m[i,j] == "L"):
			s = s + 0
print(s)
-- EXECUTION TIME:
0.686415
-- ERROR:
  File "/home/codebench/codes/1875/1725/main.py", line 2
    form numpy.linalg import *
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:16) 
-- CODE:
from numpy import *
form numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(m[i,j] == "B"):
			s = s + 1
		if(m[i,j] == "L"):
			s = s + 0
print(s)
-- ERROR:
File "XXXX", line 2
    form numpy.linalg import *
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:51:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(m[i,j] == "B"):
			s = s + 1
		if(m[i,j] == "L"):
			s = s + 0
print(s)
-- EXECUTION TIME:
0.907819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 7, in <module>
    if(m[i,j] == "B"):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(m[i,j] == "B"):
			s = s + 1
		if(m[i,j] == "L"):
			s = s + 0
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:52:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(mat[i,j] == "B"):
			s = s + 1
		if(mat[i,j] == "L"):
			s = s + 0
print(s)
-- EXECUTION TIME:
1.26483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 7, in <module>
    if(mat[i,j] == "B"):
IndexError: index 4 is out of bounds for axis 1 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:52:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(mat[i,j] == "B"):
			s = s + 1
		if(mat[i,j] == "L"):
			s = s + 0
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(m[i,j] == "B"):
			s = s + 1
		if(m[i,j] == "L"):
			s = s + 0
print(s)
-- EXECUTION TIME:
0.851819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 7, in <module>
    if(m[i,j] == "B"):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(mat[i,j] == "B"):
			s = s + 1
		if(mat[i,j] == "L"):
			s = s + 0
print(s)
-- EXECUTION TIME:
0.891626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 7, in <module>
    if(mat[i,j] == "B"):
IndexError: index 4 is out of bounds for axis 1 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:54:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
s = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if(mat[i,j] == "B"):
			s = s + 1
		if(mat[i,j] == "L"):
			s = s + 0
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:00:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(inpu("digite :")))
coluno = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.16337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(inpu("digite :")))
NameError: name 'inpu' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(inpu("digite :")))
coluno = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:01:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(inpuT("digite :")))
coluno = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
0.886698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(inpuT("digite :")))
NameError: name 'inpuT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:01:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(input("digite :")))
coluno = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.13497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(input("digite :")))
coluno = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:01:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(input("digite :")))
coluna = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.00154
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:01:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite:")))
linha = array(eval(input("digite :")))
coluna = array(eval(input("digite:")))
l = shape(m)[0]
c = shape(m)[1]
if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:03:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.24395
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:03:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:03:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.34874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input("digite a linha :")))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:06:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.02904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:06:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:07:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:07:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.39306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:07:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.45875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:07:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
2.3441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:07:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
4.42577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input("digite a linha :")))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:08:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:08:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:08:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("digite a matriz:")))
linha = array(eval(input("digite a linha :")))
coluna = array(eval(input("digite a coluna:")))
l = shape(m)[0]
c = shape(m)[1]

if(m[linha,coluna])== "B".upper():
	print("BOMBA")
if(m[linha,coluna])== "L".upper():
	print("LIVRE")
-- EXECUTION TIME:
1.14921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1725/main.py", line 4, in <module>
    linha = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:15:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz:")))
B = 0
L = 0
s = 0
for i in range (shape(mat)[0]):
	for j in range (shape(mat)[1]):
		if(mat[i,j]==1):
			s = s + 1
		if(mat[i,j]==0):
			s = s + 0
print(s)
	

-- EXECUTION TIME:
1.17853
-- TEST CASE 1:
---- input:
[['B','B','L','B'],['L','L','L','L'],['B','L','B','B'],['L','B','L','L']]
---- correct output:
7
---- user output:
0
-- TEST CASE 2:
---- input:
[['B','B','B'],['B','L','B'],['L','L','B']]
---- correct output:
6
---- user output:
0
-- TEST CASE 3:
---- input:
[['B','B','L','L','L'],['L','L','L','B','L'],['L','B','B','L','B'],['B','L','L','L','B'],['B','B','B','B','B']]
---- correct output:
13
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:15:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz:")))
B = 0
L = 0
s = 0
for i in range (shape(mat)[0]):
	for j in range (shape(mat)[1]):
		if(mat[i,j]==1):
			s = s + 1
		if(mat[i,j]==0):
			s = s + 0
print(s)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 19:15:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz:")))
B = 0
L = 0
s = 0
for i in range (shape(mat)[0]):
	for j in range (shape(mat)[1]):
		if(mat[i,j]== 1):
			s = s + 1
		if(mat[i,j]== 0):
			s = s + 0
print(s)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 19:17:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz:")))
B = 0
L = 0
s = 0
for i in range (shape(mat)[0]):
	for j in range (shape(mat)[1]):
		if(mat[i,j]== "B"):
			s = s + 1
print(s)
	

-- EXECUTION TIME:
1.25881
-- TEST CASE 1:
---- input:
[['B','B','L','B'],['L','L','L','L'],['B','L','B','B'],['L','B','L','L']]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[['B','B','B'],['B','L','B'],['L','L','B']]
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
[['B','B','L','L','L'],['L','L','L','B','L'],['L','B','B','L','B'],['B','L','L','L','B'],['B','B','B','B','B']]
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
